2003-04-04  Duncan Mak  <duncan@ximian.com>

	* doc/web/render-team-page.cs: Make it use 'none.png' if no image
	are specified in the XML.

	* doc/web/team.xml: Remove the comment.

	* doc/web/render-team-page.cs: Make it not output a full HTML file.

2003-04-04  Duncan Mak  <duncan@ximian.com>

	* doc/web/commands: 
	* doc/web/makefile: Add team page information.

	* doc/web/team.xml: 
	* doc/web/render-team-page.cs: Code for rendering a team page.

2003-04-02  Duncan Mak  <duncan@ximian.com>

	* doc/web/makefile: Add a new make target for generating a team
	page on go-mono.com.

2003-04-04  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Added check for GC_gcj_malloc.

2003-04-04  Martin Willemoes Hansen <mwh@sysrq.dk>

	* man/sqlsharp.1: changed pass= to password= for the 
	  PostgreSql provider.

>>>>>>> 1.166
2003-03-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* data/machine.config: added SessionStateModule to httpModules section.

2003-02-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* data/machine.config: added default sessionState section and handler.

2003-02-17  Daniel Morgan <danmorg@sc.rr.com>

	* doc/provider-factory: add new web page 
	about Mono.Data's ProviderFactory

	* doc/web/commands
	* doc/web/makefile: add provider-factory web page to build
	
	* doc/ado-net
	* doc/ibmdb2
	* doc/postgresql
	* doc/sqlclient
	* doc/tdsclient
	* doc/sybase
	* doc/mysql
	* doc/firebird
	* doc/oracle
	* doc/oledb
	* doc/odbc
	* doc/sqlite: updated web pages

2003-02-16  Martin Baulig  <martin@ximian.com>

	* doc/jit-debug-sample
	* doc/jit-debug-sample2: Removed.

	* doc/jit-debug: Updated.

2003-02-13  Daniel Morgan <danmorg@sc.rr.com>

	* doc/screenshots
	* doc/ado-net
	* doc/oracle
	* doc/gtk-sharp: update web pages
	
2003-02-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* data/machine.config: added sample globalization section.

2003-02-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>
