@@ -1,3 +1,7 @@
+2003-04-07  Duncan Mak  <duncan@ximian.com>
+
+	* doc/web/render-team-page.cs: Fix ContributorComparer.
+
 2003-04-04  Duncan Mak  <duncan@ximian.com>
 
 	* doc/web/render-team-page.cs: Make it use 'none.png' if no image
